Added superhero selection

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up Page</title>
   </head>
+
   <body>
     <h1>
       <center>T-shirt SignUp</center>
@@ -35,6 +36,12 @@
         <input type="radio" name="gender" id="male" />M
         <input type="radio" name="gender" id="female" />F
         <input type="radio" name="gender" id="other" />other <br /><br />
+        <label for="hero">Favorite SuperHero :</label>
+        <input type="checkbox" id="hero" />Superman
+        <input type="checkbox" name="" id="hero" />Batman
+        <input type="checkbox" name="" id="hero" />Spiderman
+        <input type="checkbox" name="" id="hero" />Flash
+        <input type="checkbox" id="hero" />Ironman <br /><br />
         <label for="size">Size :</label>
         <input type="radio" name="size" id="xs" />XS
         <input type="radio" name="size" id="s" />S
