--- a/index.html
+++ b/index.html
@@ -5,7 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up Page</title>
   </head>
-
+  <style>
+    body {
+      background-image: url("custom-tshirt-printing.webp");
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: 0;
+      padding: 20px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    }
+    form {
+      background: black;
+      color: yellow;
+      width: 41%;
+      height: 50%;
+      padding: 16px;
+      margin: auto;
+      text-align: center;
+      border: 5px solid black;
+    }
+    input {
+      color: black;
+      background-color: lightcyan;
+      outline: none;
+    }
+    h1 {
+      color: yellow;
+      background: #000;
+      padding: 20px;
+      width: 41%;
+      margin: auto;
+    }
+  </style>
   <body>
     <h1>
       <center>T-shirt SignUp</center>
